Refactor and enhance document ingestion and orchestration components
- Removed the maven-compiler-plugin configuration from pom.xml.
- Updated DocumentIngestionAsyncConfig to use a fixed thread pool with a configurable maximum concurrency.
- Modified RagConfiguration to allow dynamic table creation based on configuration.
- Enhanced ToolEmbeddingInitializer to log embedding population times.
- Improved OpenApiDocumentFetcher with logging for fetch durations and parsing times.
- Updated PosAssistant interface to include memory ID for chat context.
- Revised SessionAgentManager to cache role-specific agents and improve memory management.
- Enhanced StreamingSessionAgentManager to support role-level caching and improved logging.
- Added timing logs to DocumentEmbeddingIngestor for embedding and storage operations.
- Updated DocumentIngestionServiceImpl to log job processing times.
- Refactored ToolRegistrationServiceImpl to log tool registration durations.
- Improved unit tests for SessionAgentManager and StreamingSessionAgentManager to validate caching behavior and tool resolution.